# enchantum

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bench_auto  bench_len_first  bench_naive  benchmark_test  poc_test  poc_test.cpp  test_api_compatibility.cpp  test_len_first  test_len_first.cpp
.github/scripts/: build_and_test.sh
.github/workflows/: ci.yml  cpp14-regression.yml
benchmarks/: CMakeLists.txt  bench_report.md  bench_results.csv  enchantum_big_enums.cpp  enchantum_cast_bench.cpp  enchantum_small_enums.cpp  generate_compile_time_tests.py  magic_enum_big_enums.cpp  magic_enum_small_enums.cpp  multi_compiler_benchmark.md  multi_compiler_results.csv  policy_bench_auto.cpp  policy_bench_len_first.cpp  policy_bench_naive.cpp  runtime_benchmarks.cpp
cmake/: enchantumConfig.cmake.in
docs/: benchmarks.md  concepts.md  features.md  limitations.md
enchantum/include/enchantum/: algorithms.hpp  all.hpp  array.hpp  bitflags.hpp  bitset.hpp  bitwise_operators.hpp  cast.hpp  common.hpp  enchantum.hpp  enchantum_clang.hpp  enchantum_gcc.hpp  enchantum_msvc.hpp  entries.hpp  fmt_format.hpp  fwd.hpp  generators.hpp  iostream.hpp  istream.hpp  next_value.hpp  ostream.hpp  scoped.hpp  std_format.hpp  type_name.hpp
enchantum/include/enchantum/details/: algorithms.hpp  cast_helper.hpp  compat.hpp  countr_zero.hpp  enchantum_clang.hpp  enchantum_gcc.hpp  enchantum_msvc.hpp  enchantum_nvcc.hpp  enchantum_resharper_cpp.hpp  format_util.hpp  generate_arrays.hpp  hash.hpp  optional.hpp  shared.hpp  string.hpp  string_switch.hpp  string_view.hpp
single_include/: enchantum_single_header.hpp
tests/: CMakeLists.txt  algorithms.cpp  array.cpp  binary_size_test.cpp  bitflags.cpp  bitset.cpp  case_insensitive.hpp  concepts.cpp  cpp14_config.hpp  cpp14_single_header.cpp  cpp14_smoke.cpp  different_entries_types.cpp  double_include.cpp  empty_enum.cpp  enchantum.cpp  fmt_format.cpp  format_test.cpp  functors.cpp  generators.cpp  iostream.cpp  istream.cpp  next_value.cpp  null_terminated.cpp  ostream.cpp  pch.hpp  prefix_length.cpp  scoped.cpp  single_header.cpp  std_format.cpp  test_utility.hpp  type_name.cpp  unscoped_test.cpp
tests/config_test/: config.cpp  config.hpp
